# ssg-tasl-cli

./: .gitignore  README.md  pyproject.toml
tasl/: __init__.py  _main.py  slides_from_guide.py  utils.py
